RESOLVED FIXED32903
REGRESSION (r52494): Assertion failure in Frame::caretBlinkTimerFired() (selection()->isCaret())
https://bugs.webkit.org/show_bug.cgi?id=32903
Summary REGRESSION (r52494): Assertion failure in Frame::caretBlinkTimerFired() (sele...
mitz
Reported 2009-12-23 10:14:19 PST
ASSERTION FAILED: selection()->isCaret() (WebCore/page/Frame.cpp:697 void WebCore::Frame::caretBlinkTimerFired(WebCore::Timer<WebCore::Frame>*)) <http://trac.webkit.org/changeset/52494> delayed stopping the caret blink timer, and it looks like in this case it fires after the selection becomes a non-caret but before selectionLayoutChanged() is called to stop the timer. <rdar://problem/7496082>
Attachments
David Levin
Comment 1 2009-12-23 17:16:28 PST
Rolled out r52494 with r52535. I'll re-open the original bug.
Darin Adler
Comment 2 2009-12-26 17:30:49 PST
Do you have steps to reproduce? I fixed this, but want to test.
mitz
Comment 3 2009-12-26 17:31:45 PST
(In reply to comment #2) > Do you have steps to reproduce? I fixed this, but want to test. I do not.
David Levin
Comment 4 2009-12-31 10:51:49 PST
(In reply to comment #2) > Do you have steps to reproduce? I fixed this, but want to test. I have no repro steps either. I encountered while running layout test in chromium on osx with the patch.
Note You need to log in before you can comment on or make changes to this bug.