2009-12-23  David Levin  <levin@chromium.org>

REGRESSION (r52494): Assertion failure in Frame::caretBlinkTimerFired() (selection()->isCaret())
        https://bugs.webkit.org/show_bug.cgi?id=32903

        No review but ok'ed by Darin Adler. Rolling out r52494 due to above regression.

LayoutTests:
        * fast/forms/selection-layout-reentry-strange-case-expected.txt: Removed.
        * fast/forms/selection-layout-reentry-strange-case.html: Removed.
        * platform/mac/accessibility/frame-with-title-expected.txt:

WebCore:
        * editing/SelectionController.cpp:
        (WebCore::SelectionController::SelectionController):
        (WebCore::SelectionController::setSelection):
        * editing/SelectionController.h:
        * page/Frame.cpp:
        (WebCore::Frame::setCaretVisible):
        (WebCore::Frame::selectionLayoutChanged):
        * page/FrameView.cpp:
        (WebCore::FrameView::needsLayout):

git-svn-id: svn://svn.chromium.org/blink/trunk@52535 bbb929c8-8fbe-4397-9dbb-9b2b20218538