third_party/WebKit/WebCore/editing/SelectionController.h
@@ -1,6 +1,6 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
- * Copyright (C) 2004, 2009 Apple Inc. All rights reserved.
+ * Copyright (C) 2004 Apple Computer, Inc.  All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -125,10 +125,6 @@ public:
     bool isFocusedAndActive() const;
     void pageActivationChanged();
 
-    // Selection display machinery
-    void setNeedsDisplayUpdate(bool = true);
-    bool needsDisplayUpdate() const { return m_needsDisplayUpdate; }
-
 #ifndef NDEBUG
     void formatForDebugger(char* buffer, unsigned length) const;
     void showTreeForThis() const;
@@ -179,7 +175,7 @@ private:
     bool m_isDragCaretController : 1;
     bool m_isCaretBlinkingSuspended : 1;
     bool m_focused : 1;
-    bool m_needsDisplayUpdate : 1;
+
 };
 
 inline bool operator==(const SelectionController& a, const SelectionController& b)
