third_party/WebKit/WebCore/page/Frame.cpp
@@ -564,7 +564,7 @@ void Frame::setCaretVisible(bool flag)
         return;
     clearCaretRectIfNeeded();
     m_caretVisible = flag;
-    selection()->setNeedsDisplayUpdate();
+    selectionLayoutChanged();
 }
 
 void Frame::clearCaretRectIfNeeded()
@@ -631,8 +631,6 @@ void Frame::setFocusedNodeIfNeeded()
 
 void Frame::selectionLayoutChanged()
 {
-    selection()->setNeedsDisplayUpdate(false);
-
     bool caretRectChanged = selection()->recomputeCaretRect();
 
 #if ENABLE(TEXT_CARET)
